fixed scroll bar on mobile and tablet for team page

--- a/src/components/about/team/about_team.css
+++ b/src/components/about/team/about_team.css
@@ -11,6 +11,10 @@
     position: relative;
 }
 
+.page-title2 {
+    display: none;
+}
+
 /* Team Container */
 
 .team-contents-container {
@@ -99,6 +103,21 @@
 
 @media only screen and (max-width: 1024px) {
 
+    .page-title {
+        display: none;
+    }
+
+    .page-title2 {
+        padding-bottom: 10px;
+        font-size: 40px;
+        font-weight: 600;
+        line-height: 104.5%;
+        letter-spacing: 0.8px;
+        display: flex;
+        position: relative;
+
+    }
+
     .team-contents-container {
         display: flex;
     }
@@ -121,17 +140,18 @@
         display: flex;
         flex-direction: row;
         gap: 0px;
+        overflow-x: scroll;
     }
 
     .section-links {
         display: flex;
         flex-direction: column;
         padding-top: 0px;
-        overflow-x: scroll;
         position: relative;
+        z-index: 1;
     }
 
-    .section-links::-webkit-scrollbar {
+    .section-links-content::-webkit-scrollbar {
         display: none;
     }
 
@@ -183,8 +203,11 @@
 
     .mid-section-ctr {
         padding-left: 0px;
-        padding-top: 20px;
+        padding-top: 2rem;
+
         align-items: center;
+        height: 70rem;
+        overflow-y: scroll;
     }
 
     .testing {
